# iPhotron-LocalPhotoAlbumManager

./: .gitignore  AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: CHANGELOG.md  architecture.md  development.md  security.md
docs/misc/: BUILD_EXE.md  GALLERY_SCROLL_PIPELINE_GUARDRAILS.md  I18N_UI_TEXT_GUARDRAILS.md  LARGE_LIBRARY_QUERY_GUARDRAILS.md  MOVE_RESTORE_OPTIMISTIC_UI_GUARDRAILS.md  (+2 more)
packaging/: AppRun  iPhotron.desktop
scripts/: build_nuitka_fast.sh  build_nuitka_macos.sh  build_nuitka_windows.ps1  i18n_compile.sh  i18n_extract.sh
tests/: conftest.py  test_album_manifest.py  test_album_sidebar.py  test_album_tree_model.py  test_app_facade_session_open.py  test_app_live_sync.py  test_app_open_album_lazy.py  test_asset_grid_scroll.py  test_batch_insert.py  test_custom_tooltip.py  test_exiftool_fix.py  test_export_format_wiring.py  test_gallery_demand.py  test_i18n_extract_tool.py  test_i18n_translation_manager.py  test_index_sync_service.py  test_info_panel.py  test_legacy_quarantine_imports.py  test_library_bind_double_scan.py  test_library_geotagged_assets.py  test_library_live_scan_results.py  test_library_manager.py  test_library_manager_cleanup.py  test_location_live_photo_grouping.py  test_map_drag_cursor.py  test_map_runtime_service.py  test_map_sources.py  test_maps_main.py  test_marker_controller_place_labels.py  test_navigation_coordinator_cluster_gallery.py  test_navigation_coordinator_refresh.py  test_osmand_search.py  test_p2_use_cases.py  test_paginated_loader.py  test_pairing_live.py  test_parallel_scanner.py  test_people_image_utils.py  test_people_pipeline.py  test_people_service.py  test_phase4_integration.py  (+8 more)
tools/: check_architecture.py  check_i18n_strings.py  check_layer_boundaries.py  extract_i18n_strings.py
(+411 files in other folders)
